SC-000: Revrting back the chnages and added one more param